k3s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipoca
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipoca-app
  namespace: pipoca
  labels:
    app: pipoca-app
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: pipoca-app
  template:
    metadata:
      labels:
        app: pipoca-app
    spec:
      containers:
        - name: pipoca
          image: ghcr.io/dellabeneta/pipoca:__TAG_VERSION__
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 5"]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

---
apiVersion: v1
kind: Service
metadata:
  name: pipoca-service
  namespace: pipoca
  labels:
    app: pipoca-app
spec:
  type: ClusterIP
  selector:
    app: pipoca-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipoca-ingress
  namespace: pipoca
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: pipoca.dellabeneta.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipoca-service
                port:
                  number: 80
